# build_playground

./: .bazelrc  .gitignore  CMakeLists.txt  README.md  WORKSPACE  meson.build
src/: CMakeLists.txt
src/codegen/: codegen_ftd.bash
src/common/: BUILD  CMakeLists.txt  meson.build
src/common/include/common/: idtable.h  static_idtable.h
src/common/src/: fs_utils.cpp
src/logger/: BUILD  CMakeLists.txt  meson.build  test_app.c
src/samples/: meson.build
src/samples/codegen_sample/: sample.ftd  sample1.cpp  wscript
src/samples/hello_world/: BUILD  CMakeLists.txt  hello_world_main.cpp  meson.build
src/testing/: BUILD  CMakeLists.txt  meson.build  test_concurrent_queue.cpp
src/threadpool/: BUILD  CMakeLists.txt  meson.build  threadpool.cpp
var/bazel/toolchain/: BUILD  CROSSTOOL
var/bazel/toolchain/clang_700/tool_wrappers/: clang++.sh  clang.sh  ld.sh
